--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "build": " cd frontend && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": " npm run install-client &&npm run build",
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
